export const snapshot = {};

snapshot[`Issue Search Command - Help Text 1`] = `
stdout:
"
Usage: search <query>

Description:

  Search for issues using semantic search

Options:

  -h, --help                       - Show this help.                                  
  -j, --json                       - Output as JSON                                   
  -n, --limit             <limit>  - Maximum number of results           (Default: \\x1b[33m20\\x1b[39m)
  -a, --include-archived           - Include archived issues in results               

"
stderr:
""
`;

snapshot[`Issue Search Command - Empty Query 1`] = `
stdout:
""
stderr:
"✗ Failed to search issues: Search query cannot be empty
"
`;

snapshot[`Issue Search Command - JSON Output 1`] = `
stdout:
'[
  {
    "identifier": "ENG-123",
    "title": "Fix login bug",
    "priority": 2,
    "state": "In Progress",
    "assignee": "Alice",
    "updatedAt": "2026-01-15T08:00:00Z"
  },
  {
    "identifier": "ENG-456",
    "title": "Update login page",
    "priority": 3,
    "state": "Todo",
    "assignee": null,
    "updatedAt": "2026-01-14T10:30:00Z"
  }
]
'
stderr:
""
`;

snapshot[`Issue Search Command - Returns Results 1`] = `
stdout:
"ID      P  TITLE             STATE       UPDATED   
ENG-123 ▄▆█ Fix login bug     In Progress 55 days ago
ENG-456 ▄▆  Update login page Todo        56 days ago

Found 2 issues
"
stderr:
""
`;

snapshot[`Issue Search Command - JSON Output No Results 1`] = `
stdout:
"[]
"
stderr:
""
`;

snapshot[`Issue Search Command - No Results 1`] = `
stdout:
'No issues found matching "nonexistent-query-xyz"
'
stderr:
""
`;
